# markdown-fmt

./: COPYING  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain  rustfmt.toml
.github/workflows/: ci.yaml  fuzz.yaml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: idempotent.rs
src/: adapters.rs  builder.rs  config.rs  definition_list.rs  escape.rs  footnote.rs  formatter.rs  header.rs  html.rs  lib.rs  links.rs  list.rs  main.rs  paragraph.rs  rust_crate.rs  table.rs  test.rs  unstable.rs  utils.rs  writer.rs
src/adapters/: end_list_at_last_item.rs  loose_list.rs  text_merge.rs
src/adapters/test/loose_list/: basic.md  deeply_nested_tight_list.md  definition_list.md  emphasis_strong_emphasis_strikethrough.md  emphasis_strong_emphasis_strikethrough_code_span.md  headers.md  inline_html.md  link.md  taks_list.md
src/config/: options.rs
src/rust_crate/: parse_crate.rs
tests/: commonmark_v0_30_spec.rs  footnotes_v0_10_3.rs  gfm_spec_v0_29_0_gfm_13.rs  heading_attrs_v0_10_3.rs  main.rs  metadata_blocks_v0_10_3.rs  spec_tests.py
tests/common/: mod.rs
tests/source/: definition_list.md  empty_block_quotes.md  empty_code_blocks.md  empty_lists.md  escaping.md  footnotes.md  github_flavored_markdown_tables.md  headers.md  html_blocks.md  links.md  multi_line_code.md  multi_line_html.md  recursive_markdown_formatting.md  reference_link_definitions.md  task_list_items.md  thematic_break.md  wrap_tight_list.md
tests/source/config/max_width/: 50.md
tests/source/config/reflow_text/: true_with_max_width.md
tests/source/config/unstable/unordered-list-marker/: asterisk.md  hyphen.md  plus.md
tests/spec/CommonMark/: LICENSE  README  commonmark_v0_30_spec.json
tests/spec/GitHub/: LICENSE  README  gfm_spec_v0_29_0_gfm_13.json  spec_tests.py.patch
tests/spec/pulldown_cmark/: LICENSE  README  footnotes_v0_10_3.json  heading_attrs_v0_10_3.json  metadata_blocks_v0_10_3.json
