[package]
name = "markdown-fmt"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Markdown formatter"
authors = ["Yacin Tmimi <yacintmimi@gmail.com>"]
repository = "https://github.com/ytmimi/markdown-fmt"
documentation = "https://docs.rs/crate/markdown-fmt"
license = "MIT"
keywords = ["markdown", "commonmark"]
include = ["/src/**/*", "/LICENSE", "/README.md", "/CHANGELOG.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
pulldown-cmark = { version = "0.9.3", default-features = false }
unicode-width = "0.1"
unicode-segmentation = "1.9"
clap = { version = "4.5.2", features = ["derive"] }
anyhow = "1.0.80"

[features]
gen-tests = []

[build-dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
