[package]
name = "markdown-fmt"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Markdown formatter"
authors = ["Yacin Tmimi <yacintmimi@gmail.com>"]
repository = "https://github.com/ytmimi/markdown-fmt"
documentation = "https://docs.rs/crate/markdown-fmt"
license = "MIT"
keywords = ["markdown", "commonmark"]
include = ["/src/**/*", "/LICENSE", "/README.md", "/CHANGELOG.md"]
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "markdown-fmt"
required-features = ["build-binary"]

[lints.rust]
unsafe_code = "forbid"
missing-docs = "deny"

[dependencies]
itertools = "0.10"
pulldown-cmark = { version = "0.13.0", default-features = false }
unicode-width = "0.1"
unicode-segmentation = "1.9"
clap = { version = "4.5.2", features = ["derive"], optional = true }
anyhow = { version = "1.0.80", optional = true }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }
textwrap = "0.16.1"
regex = {version = "1.11.1", default-features = false,  features = ["std", "unicode-bool"]}

[features]
gen-tests = ["dep:serde", "dep:serde_json"]
build-binary = ["dep:clap", "dep:anyhow", "dep:tracing-subscriber"]

[build-dependencies]
serde = { version = "1.0.160", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
rust_search = "2.1.0"
